feat: Add paper theme to re-terminal

--- a/themes/re-terminal/assets/css/color/orange.scss
+++ b/themes/re-terminal/assets/css/color/orange.scss
@@ -1,3 +1,8 @@
 :root {
-  --accent: #FFA86A;
+    --accent: #ffa86a;
+    --background: color-mix(in srgb, var(--accent) 2%, #1d1e28 98%);
+    --accent-contrast-color: black;
+    --color: white;
+    --border-color: rgba(255, 255, 255, 0.1);
+    --article-link-color: var(inherit);
 }
