--- a/themes/re-terminal/assets/css/color/pink.scss
+++ b/themes/re-terminal/assets/css/color/pink.scss
@@ -1,3 +1,8 @@
 :root {
-  --accent: #EE72F1;
+    --accent: #ee72f1;
+    --background: color-mix(in srgb, var(--accent) 2%, #1d1e28 98%);
+    --accent-contrast-color: black;
+    --color: white;
+    --border-color: rgba(255, 255, 255, 0.1);
+    --article-link-color: var(inherit);
 }
