chore: cleanup theme

--- a/themes/re-terminal/layouts/partials/footer.html
+++ b/themes/re-terminal/layouts/partials/footer.html
@@ -5,8 +5,10 @@
         <span>{{ $.Site.Params.Copyright | safeHTML }}</span>
     {{ else }}
       <div class="copyright">
-        <span>© {{ now.Year }}</span>
+        <span>© {{ now.Year }} Powered by <a href="https://gohugo.io">Hugo</a></span>
     {{ end }}
+      <span>:: <a href="https://github.com/mirus-ua/hugo-theme-re-terminal" target="_blank">Theme</a> made by <a href="https://github.com/mirus-ua" target="_blank">Mirus</a></span>
+      </div>
   </div>
 </footer>
 
