--- a/themes/re-terminal/assets/css/color/paper.scss
+++ b/themes/re-terminal/assets/css/color/paper.scss
@@ -1,28 +1,24 @@
 :root {
-    --accent: #1d1e28; /* 1 of 5 basic colors */
-    --background: color-mix(
-        in srgb,
-        var(--accent) 2%,
-        #fefcfa 98%
-    ); /* background color; inherit shades of the accent */
-    --accent-contrast-color: white; /* mainly uses for text on the accent backgrounds but not limited */
-    --color: black; /* text color, also some other text use the variable in color mixing */
-    --border-color: rgba(0, 0, 0, 0.1); /* border color */
-    --article-link-color: var(inherit); /* for you, who want to colorize your article links */
+  --accent: #1d1e28;
+  --accent-contrast-color: white;
+  --article-link-color: var(inherit);
+  --background: color-mix(in srgb, var(--accent) 2%, #fefcfa 98%);
+  --border-color: rgba(0, 0, 0, 0.1);
+  --color: black;
+  --menu-color: black;
 
-    /* code syntax */
-    /* take a look at themes/re-terminal/assets/css/syntax.scss to understand in detail which color stands for */
-    --syntax-line-highlight-mix: color-mix(in srgb, var(--accent) 90%, #000 10%);
-    --syntax-func-color: color-mix(in srgb, var(--accent) 70%, #000 30%);
-    --syntax-var-color: color-mix(in srgb, var(--accent) 90%, #000);
-    --syntax-value-color: color-mix(in srgb, var(--accent), black);
-    --syntax-punctuation-color: black;
-    --syntax-cdata-color: rgba(0, 0, 0, 0.3);
-    --syntax-code-toolbar-border-color: rgba(0, 0, 0, 0.2);
-    --syntax-line-highlight-background: hsla(336, 80%, 50%, 0.4);
-    --syntax-line-highlight-color: hsl(336, 80%, 95%);
-    --syntax-line-highlight-box-shadow-color: black;
-    --syntax-copy-button-background: hsla(360, 100%, 12.2%, 0.2);
-    --syntax-copy-button-shadow-color: rgba(255, 255, 255, 0.2);
-    --syntax-copy-button-color: #444;
+  // Use in code syntax highlighting
+  --syntax-func-color: color-mix(in srgb, var(--accent) 70%, #000 30%);
+  --syntax-var-color: color-mix(in srgb, var(--accent) 90%, #000);
+  --syntax-value-color: color-mix(in srgb, var(--accent), black);
+  --syntax-punctuation-color: black;
+  --syntax-comment-color: rgba(0, 0, 0, 0.3);
+  --syntax-line-highlight-mix: color-mix(in srgb, var(--accent) 90%, #000 10%);
+  --syntax-line-highlight-background-color: hsla(336, 20%, 50%, 0.4);
+  --syntax-line-highlight-color: hsl(336, 20%, 95%);
+  --syntax-line-highlight-box-shadow: black;
+  --syntax-code-border-color: rgba(0, 0, 0, 0.1);
+  --syntax-code-copy-button-background: hsla(360, 0%, 87.8%, 0.2);
+  --syntax-code-copy-button-color: #444;
+  --syntax-code-copy-button-box-shadow-color: rgba(255, 255, 255, 0.2);
 }
