--- a/themes/re-terminal/assets/css/main.scss
+++ b/themes/re-terminal/assets/css/main.scss
@@ -11,7 +11,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Source Code Pro', 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace;
+  font-family: 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace;
   font-size: 1rem;
   line-height: 1.54;
   letter-spacing: -0.02em;
@@ -128,7 +128,7 @@ figure {
 }
 
 code, kbd {
-  font-family: 'Source Code Pro', 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace !important;
+  font-family: 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace !important;
   font-feature-settings: normal;
   background: color-mix(in srgb, var(--accent), transparent 80%);
   color: var(--accent);
