--- a/themes/re-terminal/layouts/404.html
+++ b/themes/re-terminal/layouts/404.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <div class="post">
-    <h1 class="post-title">404 — {{ $.Site.Params.missingContentMessage | default "Page not found" }}</h1>
+    <h1 class="post-title">404 — {{ $.Site.Params.missingContentMessage | default "Page not found..." }}</h1>
 
     <div class="post-content">
       <a href="{{ "/" | absURL }}">{{ $.Site.Params.missingBackButtonLabel | default "Back to home page" }}&nbsp;→</a>
