--- a/themes/re-terminal/layouts/partials/footer.html
+++ b/themes/re-terminal/layouts/partials/footer.html
@@ -1,15 +1,16 @@
 <footer class="footer">
   <div class="footer__inner">
     {{ if $.Site.Params.Copyright }}
-      <div class="copyright copyright--user">
-        <span>{{ $.Site.Params.Copyright | safeHTML }}</span>
-    {{ else }}
+    <div class="copyright copyright--user">
+      <span>{{ $.Site.Params.Copyright | safeHTML }}</span>
+      {{ else }}
       <div class="copyright">
-        <span>© {{ now.Year }} Powered by <a href="https://gohugo.io">Hugo</a></span>
-    {{ end }}
-      <span>:: <a href="https://github.com/mirus-ua/hugo-theme-re-terminal" target="_blank">Theme</a> made by <a href="https://github.com/mirus-ua" target="_blank">Mirus</a></span>
+        <span>© {{ now.Year }} {{ $.Site.Params.PoweredByLabel }} <a href="https://gohugo.io">Hugo</a></span>
+        {{ end }}
+        <span>:: <a href="https://github.com/mirus-ua/hugo-theme-re-terminal" target="_blank">Theme</a> {{
+          $.Site.Params.MadeByLabel }} <a href="https://github.com/mirus-ua" target="_blank">Mirus</a></span>
       </div>
-  </div>
+    </div>
 </footer>
 
 {{ $menu := resources.Get "js/menu.js" | js.Build }}
@@ -21,9 +22,9 @@
 
 <!-- Banner JS if it enabled -->
 {{ if .Site.Params.Banner }}
-  {{ $banner := resources.Get "js/banner.js" | js.Build | resources.Minify }}
+{{ $banner := resources.Get "js/banner.js" | js.Build | resources.Minify }}
 
-  <script type="text/javascript" src="{{ $banner.RelPermalink }}"></script>
+<script type="text/javascript" src="{{ $banner.RelPermalink }}"></script>
 {{ end }}
 
 <!-- Extended footer section-->
