--- a/themes/re-terminal/layouts/partials/menu.html
+++ b/themes/re-terminal/layouts/partials/menu.html
@@ -1,8 +1,9 @@
+{{ $sortedMainMenu := sort $.Site.Menus.main "Weight"}}
 <nav class="navigation-menu">
   <ul class="navigation-menu__inner menu--desktop">
     {{ if or $.Site.Params.showMenuItems ( eq .Site.Params.showMenuItems 0 ) }}
     {{/* get first amount of item */}}
-    {{ range first $.Site.Params.showMenuItems (sort $.Site.Menus.main "Weight") }}
+    {{ range first $.Site.Params.showMenuItems $sortedMainMenu }}
     {{ if not .HasChildren }}
     <li><a href="{{ .URL }}" {{ if .Params.NewTab -}} target="_blank" {{- end }}>{{ .Name }}</a></li>
     {{ else }}
@@ -20,14 +21,13 @@
     </li>
     {{end}}
     {{ end }}
-    {{ if gt (len $.Site.Menus.main) $.Site.Params.showMenuItems }}
+    {{ if gt (len $sortedMainMenu) $.Site.Params.showMenuItems }}
     <li>
       <ul class="menu">
         <li class="menu__trigger">{{ $.Site.Params.MenuMore }}&nbsp;▾</li>
         <li>
           <ul class="menu__dropdown">
-            {{ range last (sub (len $.Site.Menus.main) $.Site.Params.showMenuItems) (sort $.Site.Menus.main "Weight")
-            }}
+            {{ range last (sub (len $sortedMainMenu) $.Site.Params.showMenuItems) $sortedMainMenu }}
             {{ if not .HasChildren }}
             <li><a href="{{ .URL }}" {{ if .Params.NewTab -}} target="_blank" {{- end }}>{{ .Name }}</a></li>
             {{ else }}
@@ -47,7 +47,7 @@
     </li>
     {{ end }}
     {{ else }}
-    {{ range $.Site.Menus.main }}
+    {{ range $sortedMainMenu }}
     {{ if not .HasChildren }}
     <li><a href="{{ .URL }}" {{ if .Params.NewTab -}} target="_blank" {{- end }}>{{ .Name }}</a></li>
     {{ end }}
